<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share" />

    <item
        android:id="@+id/menu_delete_log_files"
        android:title="@string/menu_delete_logs" />

    <item
        android:id="@+id/menu_kill"
        android:title="@string/menu_kill" />

    <!--<item
        android:id="@+id/menu_service"
        android:title="Service" />-->

    <item
        android:id="@+id/menu_reregister"
        android:title="@string/menu_reregister" />

    <item
        android:id="@+id/menu_show_tutorial"
        android:title="@string/menu_show_tutorial" />

    <item
        android:id="@+id/menu_study_information"
        android:title="@string/menu_study_information" />

    <item
        android:id="@+id/menu_finish_study_day"
        android:icon="@drawable/ic_check_circle_24dp"
        android:title="@string/menu_finish_study_day" />

    <item
        android:id="@+id/menu_app_info"
        android:title="@string/menu_app_info" />
</menu>
