<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_wakeup">

    <fragment
        android:id="@+id/navigation_wakeup"
        android:name="de.fau.cs.mad.carwatch.ui.wakeup.WakeupFragment"
        android:label="@string/title_wakeup"
        tools:layout="@layout/fragment_wakeup" />

    <fragment
        android:id="@+id/navigation_alarm"
        android:name="de.fau.cs.mad.carwatch.ui.alarm.AlarmFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_alarm" />

    <fragment
        android:id="@+id/navigation_bedtime"
        android:name="de.fau.cs.mad.carwatch.ui.bedtime.BedtimeFragment"
        android:label="@string/title_bedtime"
        tools:layout="@layout/fragment_bedtime" />

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="de.fau.cs.mad.carwatch.ui.barcode.Ean8Fragment"
        android:label="@string/title_scanner"
        tools:layout="@layout/fragment_barcode" />
</navigation>